--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "koa": "^1.2.4",
+    "koa-bodyparser": "^2.3.0",
     "koa-router": "^5.4.0",
     "request": "^2.79.0",
     "webcamjs": "^1.0.19"
